no-bottom-margin to mb-0

--- a/templates/accounts/projects-board.html
+++ b/templates/accounts/projects-board.html
@@ -5,7 +5,7 @@
     <div class="content-card-v2 content-card-space">
 
         <div>
-            <h2 class="no-bottom-margin">Local Contexts Projects Board</h2><br>
+            <h2 class="mb-0">Local Contexts Projects Board</h2><br>
             <p class="mt-0 w-80">
                 This Project Board shows all public Projects created on the Local Contexts Hub. View a Project to see additional details.
             </p>
