--- a/templates/accounts/register.html
+++ b/templates/accounts/register.html
@@ -14,7 +14,7 @@
 </script>
 
 <div class="flex-this space-between w-90">
-  <div><h2 class="no-bottom-margin">Register with Local Contexts</h2></div>
+  <div><h2 class="mb-0">Register with Local Contexts</h2></div>
   <div>
     <p>
       Already signed up? <a href="{% url 'login' %}" class="default-a">Sign in</a>
