--- a/templates/communities/apply-labels.html
+++ b/templates/communities/apply-labels.html
@@ -6,12 +6,12 @@
 
         <div class="w-60 flex-this column">
             <div>
-                <h2 class="no-bottom-margin mt-0">Apply Labels</h2>
+                <h2 class="mb-0 mt-0">Apply Labels</h2>
                 <p>Please choose from your customized Labels below. Select a Label to see description.</p>
             </div>
 
             <div>
-                <h2 class="no-bottom-margin mt-0">
+                <h2 class="mb-0 mt-0">
                     <a href="{% url 'community-project-actions' community.id project.unique_id %}" class="darkteal-text underline-hover">
                         {{ project.title }}
                     </a>
