--- a/templates/communities/approve-label.html
+++ b/templates/communities/approve-label.html
@@ -6,7 +6,7 @@
         <div class="content-card-v2 content-card-space">
             <div class="flex-this space-between">    
                 <div class="w-80">
-                    <h2 class="no-bottom-margin mt-0">Approve Label</h2>
+                    <h2 class="mb-0 mt-0">Approve Label</h2>
                     <p>Unapproved Labels need to be approved by a secondary person (admin or editor) of the community. <br>
                         If you would like to request changes to or deny approval for this Label, select 'No', then
                         include a reason in the textbox that appears.<br><br>
