--- a/templates/communities/customize-label.html
+++ b/templates/communities/customize-label.html
@@ -212,7 +212,7 @@
         <form id="saveLabelForm" method="POST" action="" enctype="multipart/form-data">
             {% csrf_token %}
             <div>
-                <h3 class="mt-0 no-bottom-margin">Step 2. Customize Label</h3>
+                <h3 class="mt-0 mb-0">Step 2. Customize Label</h3>
                 <p class="w-80">You can edit the Label template text, and add a local name that reflects your community alongside the Label name.</p>
             </div>
             <div>
