--- a/templates/communities/select-label.html
+++ b/templates/communities/select-label.html
@@ -16,7 +16,7 @@
 <div class="content-card-v2 content-card-space">
 
     <div class="w-100">
-        <h2 class="no-bottom-margin mt-0">Customized Labels</h2>
+        <h2 class="mb-0 mt-0">Customized Labels</h2>
 
         {% if bclabels or tklabels %}
             <div class="flex-this space-between">
@@ -159,7 +159,7 @@
                             <div><p class="bold">Label text</p></div>
                             <div><p>{{ bclabel.language }}</p></div>
                         </div>
-                        <div><p class="mt-0 no-bottom-margin">{{ bclabel.label_text }} </p></div>
+                        <div><p class="mt-0 mb-0">{{ bclabel.label_text }} </p></div>
                     </div>
 
                     {% include 'partials/_label-translation.html' %}
@@ -219,7 +219,7 @@
                             <div><p class="bold">Label text</p></div>
                             <div><p>{{ tklabel.language }}</p></div>
                         </div>
-                        <div><p class="mt-0 no-bottom-margin">{{ tklabel.label_text }} </p></div>
+                        <div><p class="mt-0 mb-0">{{ tklabel.label_text }} </p></div>
                     </div>
 
                     {% include 'partials/_label-translation.html' %}
@@ -289,7 +289,7 @@
             <!-- PROVENANCE -->
             <div class="flex-this column w-100 border-top-solid-teal">
                 <div class="margin-bottom-16 w-50">
-                    <h3 class="no-bottom-margin">Provenance Labels</h3>
+                    <h3 class="mb-0">Provenance Labels</h3>
                     <p>Provenance Labels identify the group or sub-group which is the primary cultural authority for the material, and/or recognizes other interests in the material.</p>
                 </div>
 
@@ -522,7 +522,7 @@
             <div class="flex-this column w-100 border-top-solid-teal">
 
                 <div class="margin-bottom-16 w-50">
-                    <h3 class="no-bottom-margin">Permission Labels</h3>
+                    <h3 class="mb-0">Permission Labels</h3>
                     <p>Permission Labels indicate what activities the community has approved as generally acceptable. Other uses require direct engagement with primary cultural authorities.</p>
                 </div>
 
@@ -650,7 +650,7 @@
         <!-- PROVENANCE -->
         <div class="flex-this column border-top-solid-teal">
             <div class="margin-bottom-16 w-50">
-                <h3 class="no-bottom-margin">Provenance Labels</h3>
+                <h3 class="mb-0">Provenance Labels</h3>
                 <p>Provenance Labels identify the group or sub-group which is the primary cultural authority for the material, and/or recognizes other interests in the material.</p>
             </div>
             <div class="flex-this wrap w-100">
@@ -730,7 +730,7 @@
         <!-- PROTOCOL -->
         <div class="flex-this column border-top-solid-teal">
             <div class="margin-bottom-16 w-50">
-                <h3 class="no-bottom-margin">Protocol Labels</h3>
+                <h3 class="mb-0">Protocol Labels</h3>
                 <p>Protocol Labels outline agreed protocols associated with access to this material.</p>
             </div>
             <div class="flex-this wrap w-100">
@@ -799,7 +799,7 @@
         <!-- PERMISSION -->
         <div class="flex-this column border-top-solid-teal">
             <div class="margin-bottom-16 w-50">
-                <h3 class="no-bottom-margin">Permission Labels</h3>
+                <h3 class="mb-0">Permission Labels</h3>
                 <p>Permission Labels indicate what activities the community has approved as generally acceptable. Other uses require direct engagement with primary cultural authorities. </p>
             </div>
 
