--- a/templates/institutions/create-institution.html
+++ b/templates/institutions/create-institution.html
@@ -6,7 +6,7 @@
         <div>Or <a class="default-a" href="{% url 'connect-institution' %}">request to join an existing institution</a>  </div>
     </div>
 
-    <p class="no-bottom-margin mt-0">
+    <p class="mb-0 mt-0">
         The institution details provided below will default to a public display in the Local Contexts Registry.
         Providing your details will give consent to publicly being listed on the Registry.
         Read more about our privacy standards <a class="default-a" href="https://localcontexts.org/privacy-policy/" target="_blank" rel="noopener">here <i class="fa-solid fa-arrow-up-right-from-square fa-xs"></i></a>
@@ -72,7 +72,7 @@
             <small id="charCount" class="block text-align-right">200/200</small>
         </div>
 
-        <h2 class="no-bottom-margin">Institutional contact</h2>
+        <h2 class="mb-0">Institutional contact</h2>
         <p>
             A <a class="default-a" href="https://localcontexts.org/members-subscribers-and-service-providers/" target="_blank" rel="noopener">subscription program</a>
             for institution accounts will be launched in October 2024. 
