--- a/templates/partials/_add-translation.html
+++ b/templates/partials/_add-translation.html
@@ -8,7 +8,7 @@
 
     <div id="translation-form-container" class="flex-this column margin-top-16">
         <div class="margin-top-16">
-            <h3 class="no-bottom-margin">Add Label Translations</h3>
+            <h3 class="mb-0">Add Label Translations</h3>
             <p class="w-80">Here you can add any additional translations of your Label, this is an optional step.</p>
         </div>
 
