--- a/templates/partials/_label-translation.html
+++ b/templates/partials/_label-translation.html
@@ -6,7 +6,7 @@
                     <div><p class="bold">{{ translation.translated_name }}</p></div>
                     <div><p>{{ translation.language }}</p></div>
                 </div>
-                <div><p class="mt-0 no-bottom-margin">{{ translation.translated_text }} </p></div>
+                <div><p class="mt-0 mb-0">{{ translation.translated_text }} </p></div>
             </div>
         {% endfor %}
     {% endif %}
@@ -20,7 +20,7 @@
                     <div><p class="bold">{{ translation.translated_name }}</p></div>
                     <div><p>{{ translation.language }}</p></div>
                 </div>
-                <div><p class="mt-0 no-bottom-margin">{{ translation.translated_text }} </p></div>
+                <div><p class="mt-0 mb-0">{{ translation.translated_text }} </p></div>
             </div>
         {% endfor %}
     {% endif %}
