--- a/templates/partials/infocards/_user-dashcard.html
+++ b/templates/partials/infocards/_user-dashcard.html
@@ -3,7 +3,7 @@
 <section class="dash-driver flex-this column">
     <div class="flex-this space-between">
         <div class="w-70">
-            <h2 class="mt-0 no-bottom-margin">{% display_name request.user %} </h2>
+            <h2 class="mt-0 mb-0">{% display_name request.user %} </h2>
             {% if affiliation %}
                 <h3 class="mt-0">{{ profile.affiliation }}</h3>
             {% endif %}
