--- a/templates/projects/create-project.html
+++ b/templates/projects/create-project.html
@@ -28,12 +28,12 @@
                 </small>
             </div>
             {% if '/edit-project/' in request.path %}
-                <h2 class="no-bottom-margin">Edit a Local Contexts Project</h2>
+                <h2 class="mb-0">Edit a Local Contexts Project</h2>
                 <p class="w-90">
                     A project describes the context where a Notice or Label is being applied. Project creators can edit a Local Contexts Project. Project contributors will receive a notification that the Project has been edited.
                 </p>
             {% else %}
-                <h2 class="no-bottom-margin">Create a Local Contexts Project</h2>
+                <h2 class="mb-0">Create a Local Contexts Project</h2>
                 <p class="w-90">
                     {% if researcher or institution %}
                         The first step for institutions and researchers to generate Notices is to create a Project within the Local Contexts Hub. 
