--- a/templates/communities/connections.html
+++ b/templates/communities/connections.html
@@ -43,7 +43,7 @@
 
             <div id="expand-div-{{ institution.institution_name }}" class="hide">
                 <div class="border-bottom-dash-teal">
-                    <p class="no-bottom-margin">
+                    <p class="mb-0">
                         <span class="bold">Account Contact Name</span> | {% firstof institution.institution_creator.get_full_name  institution.institution_creator.username %}
                         <span class="bold margin-left-8">Account Contact Email</span> | {{ institution.institution_creator.email }}
                         <span class="bold margin-left-8">Website</span> | {{ institution.website }} <br><br>
@@ -100,7 +100,7 @@
 
             <div id="expand-div-{{ researcher.id }}" class="hide">
                 <div class="border-bottom-dash-teal">
-                    <p class="no-bottom-margin">
+                    <p class="mb-0">
                         <span class="bold">Contact Email</span> | {% if researcher.contact_email %} {{ researcher.contact_email }} {% else %} {{ researcher.user.email }} {% endif %} <br><br>
                     </p>   
                 </div> 
@@ -159,7 +159,7 @@
             </div>
             <div id="expand-div-{{ comm.community_name }}" class="hide">
                 <div class="border-bottom-dash-teal">
-                    <p class="no-bottom-margin">
+                    <p class="mb-0">
                         <span class="bold">Account Contact Name</span> | {% firstof comm.community_creator.get_full_name comm.community_creator.get_full_name %}
                         <span class="bold margin-left-8">Account Contact Email</span> | {{ comm.community_creator.email }} <br><br>
                     </p>      
