--- a/templates/communities/view-label.html
+++ b/templates/communities/view-label.html
@@ -78,7 +78,7 @@
             </div>
 
             <div class="w-80">
-                <p class="mt-0 no-bottom-margin">
+                <p class="mt-0 mb-0">
                     <span class="bold">Created by</span> - 
                     {% if bclabel %} {{ creator_name }} | {{ bclabel.community }} - {{ bclabel.created|date:'M Y'}} {% endif %}
                     {% if tklabel %} {{ creator_name }} | {{ tklabel.community }} - {{ tklabel.created|date:'M Y'}} {% endif %}
@@ -123,7 +123,7 @@
                         </div>
                     </div>
                     <div>
-                        <p class="mt-0 no-bottom-margin">
+                        <p class="mt-0 mb-0">
                             {% if bclabel %} {{ bclabel.label_text }} {% endif %}
                             {% if tklabel %} {{ tklabel.label_text }} {% endif %}
                         </p>
