--- a/templates/partials/_member-requests.html
+++ b/templates/partials/_member-requests.html
@@ -91,7 +91,7 @@
             </div>
 
             <div class="w-70">
-                <h2 class="mt-0 no-bottom-margin">{% firstof join_request.user_from.get_full_name join_request.user_from.username %}</h2>
+                <h2 class="mt-0 mb-0">{% firstof join_request.user_from.get_full_name join_request.user_from.username %}</h2>
                 {% if join_request.user_from.user_profile.position %}
                     <h3 class="mt-0">{{ join_request.user_from.user_profile.position }}</h3>
                 {% endif %}
@@ -176,7 +176,7 @@
             </div>
 
             <div class="w-70">
-                <h2 class="mt-0 no-bottom-margin">{% firstof invite.receiver.get_full_name invite.receiver.username %} </h2>
+                <h2 class="mt-0 mb-0">{% firstof invite.receiver.get_full_name invite.receiver.username %} </h2>
                 {% if invite.receiver.user_profile.position %}
                     <h3 class="mt-0">{{ invite.receiver.user_profile.position }}</h3>
                 {% endif %}
