--- a/templates/partials/_members.html
+++ b/templates/partials/_members.html
@@ -62,7 +62,7 @@
         </div>
 
         <div class="w-70">
-            <h2 class="mt-0 no-bottom-margin">
+            <h2 class="mt-0 mb-0">
                 {% firstof community.community_creator.get_full_name community.community_creator.username %}
             </h2>
             {% if community.community_creator.user_profile.position %}
@@ -135,7 +135,7 @@
             </div>
 
             <div class="w-70">
-                <h2 class="mt-0 no-bottom-margin">
+                <h2 class="mt-0 mb-0">
                     {% firstof admin.get_full_name admin.username %}
                 </h2>
                 {% if admin.user_profile.position %}
@@ -208,7 +208,7 @@
             </div>
 
             <div class="w-70">
-                <h2 class="mt-0 no-bottom-margin">
+                <h2 class="mt-0 mb-0">
                     {% firstof editor.get_full_name editor.username %}
                 </h2>
                 {% if editor.user_profile.position %}
@@ -281,7 +281,7 @@
             </div>
 
             <div class="w-70">
-                <h2 class="mt-0 no-bottom-margin">
+                <h2 class="mt-0 mb-0">
                     {% firstof viewer.get_full_name viewer.username %}
                 </h2>
                 {% if viewer.user_profile.position %}
@@ -341,7 +341,7 @@
         </div>
 
         <div class="w-70">
-            <h2 class="mt-0 no-bottom-margin">
+            <h2 class="mt-0 mb-0">
                 {% firstof institution.institution_creator.get_full_name institution.institution_creator.username %}
             </h2>
             {% if institution.institution_creator.user_profile.position %}
@@ -413,7 +413,7 @@
             </div>
 
             <div class="w-70">
-                <h2 class="mt-0 no-bottom-margin">
+                <h2 class="mt-0 mb-0">
                     {% firstof admin.get_full_name admin.username %}
                 </h2>
                 {% if admin.user_profile.position %}
@@ -486,7 +486,7 @@
             </div>
 
             <div class="w-70">
-                <h2 class="mt-0 no-bottom-margin">
+                <h2 class="mt-0 mb-0">
                     {% firstof editor.get_full_name editor.username %}
                 </h2>
                 {% if editor.user_profile.position %}
@@ -559,7 +559,7 @@
             </div>
 
             <div class="w-70">
-                <h2 class="mt-0 no-bottom-margin">
+                <h2 class="mt-0 mb-0">
                     {% firstof viewer.get_full_name viewer.username %}
                 </h2>
                 {% if viewer.user_profile.position %}
