--- a/templates/researchers/connect-researcher.html
+++ b/templates/researchers/connect-researcher.html
@@ -8,7 +8,7 @@
             <div class="margin-top-16">Or <a class="default-a" href="{% url 'select-account' %}">choose another account</a></div>
         </div>
         <div>
-            <p class="mt-0 no-bottom-margin">A researcher is a person who carries out academic or scientific research independently or in an institution, such as archive, library, museum, historical society, gallery, data repository, or university.</p>
+            <p class="mt-0 mb-0">A researcher is a person who carries out academic or scientific research independently or in an institution, such as archive, library, museum, historical society, gallery, data repository, or university.</p>
         </div>
 
         <form action="{% url 'connect-researcher' %}" method="POST" class="flex-this column w-100" id="createResearcher">
