--- a/templates/researchers/connections.html
+++ b/templates/researchers/connections.html
@@ -50,7 +50,7 @@
 
             <div id="expand-div-{{ institution.institution_name }}" class="hide">
                 <div class="border-bottom-dash-teal">
-                    <p class="no-bottom-margin">
+                    <p class="mb-0">
                         <span class="bold">Account Contact Name</span> | {% firstof institution.institution_creator.get_full_name  institution.institution_creator.username %}
                         <span class="bold margin-left-8">Account Contact Email</span> | {{ institution.institution_creator.email }}
                         <span class="bold margin-left-8">Website</span> | {{ institution.website }} <br><br>
@@ -106,7 +106,7 @@
 
             <div id="expand-div-{{ res.id }}" class="hide">
                 <div class="border-bottom-dash-teal">
-                    <p class="no-bottom-margin">
+                    <p class="mb-0">
                         <span class="bold">Contact Email</span> | {% if res.contact_email %} {{ res.contact_email }} {% else %} {{ res.user.email }} {% endif %} <br><br>
                     </p>   
                 </div> 
@@ -167,7 +167,7 @@
             </div>
             <div id="expand-div-{{ community.community_name }}" class="hide">
                 <div class="border-bottom-dash-teal">
-                    <p class="no-bottom-margin">
+                    <p class="mb-0">
                         <span class="bold">Account Contact Name</span> | {% firstof community.community_creator.get_full_name community.community_creator.get_full_name %}
                         <span class="bold margin-left-8">Account Contact Email</span> | {{ community.community_creator.email }} <br><br>
                     </p>      
