no-margin to m-0

--- a/templates/accounts/register.html
+++ b/templates/accounts/register.html
@@ -84,7 +84,7 @@
         <div class="text-align-right mr-1p">
           <input type="checkbox" name="terms-agreement" required />
         </div>
-        <div class="no-margin w-100">
+        <div class="m-0 w-100">
           <p>
             <span>Creating an account means you agree with the</span>
             <a
