--- a/templates/partials/infocards/_researcher-card.html
+++ b/templates/partials/infocards/_researcher-card.html
@@ -68,7 +68,7 @@
                     href="{% url 'update-researcher' researcher.id %}"
                     class="round-btn-small darkteal-text primary-btn white-btn"
                   >
-                    <i class="no-margin fa fa-cog" aria-hidden="true"></i>
+                    <i class="m-0 fa fa-cog" aria-hidden="true"></i>
                   </a>
                 </div>          
               </div>
