no-right-margin to mr-0

--- a/templates/partials/infocards/_community-dashcard.html
+++ b/templates/partials/infocards/_community-dashcard.html
@@ -50,7 +50,7 @@
                 </div>
             </div>
                 <!-- Count cards -->
-                <div class="flex-this column stats-card-container  bold no-right-margin">
+                <div class="flex-this column stats-card-container  bold mr-0">
 
                     <div class="stats-card flex-this flex-start">
                         <div>
