--- a/templates/partials/infocards/_institution-dashcard.html
+++ b/templates/partials/infocards/_institution-dashcard.html
@@ -48,7 +48,7 @@
                 </div>
             </div>
                 <!-- Count cards -->
-                <div class="flex-this column stats-card-container bold no-right-margin">
+                <div class="flex-this column stats-card-container bold mr-0">
 
                     <!-- Count of Labels that have been applied to institution projects -->
                     {% get_labels_count institution as total_labels %}
