--- a/templates/partials/infocards/_researcher-dashcard.html
+++ b/templates/partials/infocards/_researcher-dashcard.html
@@ -87,7 +87,7 @@
                 </div>
             </div>
             <!-- Count cards -->
-            <div class="flex-this column stats-card-container bold no-right-margin">
+            <div class="flex-this column stats-card-container bold mr-0">
 
                 <!-- Count of Labels applied to researcher projects -->
                 {% get_labels_count researcher as total_labels %}
